# neptun.ai

./: .gitignore  README.md
.github/workflows/: process-training-data.yml
NEPTUN/: README.md  wip
NEPTUN/datasets/: README.md
NEPTUN/datasets/jsonl/: Dockerhob_docs.jsonl  docker-related-code-assistant-data.jsonl  docker_documentation.jsonl  docker_image_info.json  docker_image_info.jsonl  docker_process_status.jsonl  filtered-docker-instructions-responses.jsonl  train-data-for-docker-queries.jsonl
NEPTUN/datasets/jsonl/get-started/: what-is-docker-data.jsonl
NEPTUN/datasets/neptun.bot/: README.md  docker-tags.jsonl  output.jsonl
NEPTUN/datasets/raw/json/: DockerPS.json
NEPTUN/datasets/raw/parquet/: README.md  docker-related-code-assistant-data.parquet  filtered-docker-instructions-responses.parquet  (+1 more)
NEPTUN/run/: combine-training-data-jsonl.bat  combine-training-data-jsonl.sh  generate-training-data-binaries.bat  process.sh
NEPTUN/scripts/: .gitignore  README.md  combine_jsonl.py  csv_to_jsonl.py  json_to_jsonl.py  parquet_to_jsonl.py  process_data.py  pyproject.toml  pyvenv.cfg
RWKV/: README.md  chat.py  requirements.txt
RWKV 2/: chat.py
RWKV/FineTuning/: demo-training-mac-os.sh  demo-training-run.sh  make_data.py  train.py
data/processed/: build-and-push-your-first-image-data.idx  develope-with-containers-data.idx  get-docker-desktop-data.idx  what-is-a-container-data.idx  what-is-docker-data.idx
python-scripts/: make_data_temp.jsonl  process_data.py  pyproject.toml  pyvenv.cfg
run/: process.sh
‎NEPTUNRNN/datasets/: README.md
‎NEPTUNRNN/datasets/jsonl/: DockerPS.jsonl  NLDockercommands.jsonl
‎NEPTUNRNN/python-scripts/: csv_to_jsonl.py  json_to_jsonl.py  pyproject.toml
‎NEPTUNRNN/run/: process.sh
‎NEPTUNRNN/scripts/: combine_jsonl.py  pyproject.toml
(+6 files in other folders)
