[tool.poetry]
name = "python-scripts"
version = "0.1.0"
description = ""
authors = ["stevan06v <stevanvlajic5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
