[tool.poetry]
name = "python-scripts"
version = "0.1.0"
description = ""
authors = ["stevan06v <stevanvlajic5@gmail.com>", "jonasfroeller <j.froe@gmx.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.2.1"
pytorch-lightning = "^2.5.0.post0"
deepspeed = "^0.16.2"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
